--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= image_tag current_user.get_profile_image(100, 100) %>
+      <table class="table">
+        <tbody>
+          <tr></tr>
+          <tr>
+            <th>name</th>
+            <th><%= book.user.name %></th>
+          </tr>
+          <tr>
+            <th>introduction</th>
+            <th><%= book.user.introduction %></th>
+          </tr>
+        </tbody>
+      </table>
+      <div class="row">
+        <%= link_to "edit", edit_usre_path(current_user.id), class: "btn btn-outline-secondary btn-block" %>
+      </div>
+      <h2 class="mt-3">New book</h2>
+      <%= form_with model: @book do |f| %>
+        <div class="form-group">
+          <label>Title</label>
+          <%= f.text_field :title %>
+        </div>
+        <div class="form-group">
+          <label>Opinion</label>
+          <%= f.text_field :body %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "Create Book" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
