--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,10 @@
-about page
+<div class="container">
+    <div class="row">
+        <h1 class="px-3 mx-auto">
+            Welcome to
+            <i class="fas fa-book"></i>
+            <span>Bookers</span>
+            !
+        </h1>
+    </div>
+</div>
