--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,31 @@
             <ul class="navbar-nav ml-auto">
               <li>
               <% if user_signed_in? %>
-                <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link text-light" %>
+                <li>
+                  <%= link_to "Home", user_path(current_user.id), class: "nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to "Users", users_path, class: "nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to "Books", books_path, class: "nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link text-light" %>
+                </li>
+              <% else %>
+                <li>
+                  <%= link_to "Home", root_path, class: "nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to "About", about_path, class: "nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to "Sign up", new_user_registration_path, class: "nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to "Log in", new_user_session_path, class: "nav-link text-light" %>
+                </li>
               <% end %>
               </li>
             </ul>
@@ -40,8 +64,8 @@
         <p id="notice">
           <%= flash[:notice] %>
         </p>
-    <% end %>
-    <%= yield %>
+      <% end %>
+      <%= yield %>
     </main>
     
     <footer>
