[Add] before_action autenticate

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,42 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>User info</h1>
+      <% if @user.errors.any? %>
+        <div id="error_explanation">
+          <% if @user.errors.count == 1 %>
+            <h3>
+              <%= @user.errors.count %> error prohibited this obj from being saved:
+            </h3>
+          <% else %>
+            <h3>
+              <%= @user.errors.count %> errors prohibited this obj from being saved:
+            </h3>
+          <% end %>
+          <ul>
+            <% @user.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+         </div>
+       <% end %>
+      <%= form_with model: @user, url: user_path(@user.id), method: :patch do |f| %>
+      <div class="form-group">
+        <label for="user_name">Name</label><br>
+        <%= f.text_field :name, class: "form_control_name" %>
+      </div>
+      <div class="form-group">
+        <label for="user_profile_image">Image</label><br>
+        <%= f.file_field :profile_image, accept: "image/*", class: "form_control_profile_image" %>
+      </div>
+      <div class="form-group">
+        <label for="user_introduction">Introduction</label><br>
+        <%= f.text_area :introduction, class: "form_control_introduction" %>
+      </div>
+      <div class="form-group">
+        <%= f.submit 'Update User', class: "btn btn-secondary" %>
+      </div>
+      <% end %>
+    </div>
+  </div>
+</div>
