--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,54 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= image_tag @book.user.get_profile_image(100, 100) %>
+      <table class="table">
+        <tbody>
+          <tr></tr>
+          <tr>
+            <th>name</th>
+            <th><%= @book.user.name %></th>
+          </tr>
+          <tr>
+            <th>introduction</th>
+            <th><%= @book.user.introduction %></th>
+          </tr>
+        </tbody>
+      </table>
+      <div class="row">
+        <%= link_to "edit", edit_user_path(current_user), class: "btn btn-outline-secondary btn-block" %>
+      </div>
+      <h2 class="mt-3">New book</h2>
+      <%= form_with model: @book, url: '/books', method: :post do |f| %>
+        <%= f.label :title %><br>
+        <%= f.text_field :title %><br>
+        <%= f.label :Opinion %><br>
+        <%= f.text_area :body %>
+        <%= f.submit 'Create Book' %>
+      <% end %>
+    </div>
+    
+    <div class="col-md-8 offset-md-1">
+      <h2>Book detail</h2>
+      <table class="table table-hover table-inverse">
+        <tbody>
+          <tr>
+            <td>
+              <%= image_tag @book.user.get_profile_image(100, 100) %><br>
+              <%= link_to "name", user_path(@book.user_id) %>
+            </td>
+            <td>
+              <%= link_to @book.title, book_path(@book.id) %>
+            </td>
+            <td>
+              <%= @book.body %>
+            </td>
+            <% if @book.user == current_user %>
+            <td><%= link_to "Edit", edit_book_path(@book.id),  class: "btn btn-sm btn-success" %></td>
+            <td><%= link_to "destroy", book_path(@book.id), method: :delete, "data-confirm" => "Are you sure?", class: "btn btn-sm btn-danger" %></td>
+            <% end %>
+          </tr>
+        </tbody>
+      </table>
+    </div>
