--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,7 @@
     </main>
     
     <footer>
-      <div class="container">
+      <div class="container mt-5">
         <div class="row">
           <div class="mx-auto">
             <p>CopyRight Infratop.inc</p>
