--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,5 +1,22 @@
- <div class="container px-5 px-sm-0">
-     
+<div class="container px-5 px-sm-0">
+  <% if book.errors.any? %>
+    <div id="error_explanation">
+      <% if book.errors.count == 1 %>
+        <h3>
+          <%= book.errors.count %> error prohibited this obj from being saved:
+        </h3>
+      <% else %>
+        <h3>
+          <%= book.errors.count %> errors prohibited this obj from being saved:
+        </h3>
+      <% end %>
+      <ul>
+        <% book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
@@ -18,7 +35,7 @@
         </tbody>
       </table>
       <div class="row">
-        <%= link_to "edit", edit_user_path(current_user), class: "btn btn-outline-secondary btn-block" %>
+        <%= link_to icon('fas', 'fa-user-cog'), edit_user_path(current_user), class: "btn btn-outline-secondary btn-block" %>
       </div>
       <h2 class="mt-3">New book</h2>
       <%= form_with model: book, url: '/books', method: :post do |f| %>
@@ -26,7 +43,7 @@
         <%= f.text_field :title %><br>
         <%= f.label :Opinion %><br>
         <%= f.text_area :body %>
-        <%= f.submit 'Create Book' %>
+        <%= f.submit 'Create Book', class: "btn btn-sm btn-success" %>
       <% end %>
       
     </div>
