--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,18 +1,36 @@
 <div class="container px-5 px-sm-0">
+  <% if @book.errors.any? %>
+        <div id="error_explanation">
+          <% if @book.errors.count == 1 %>
+            <h3>
+              <%= @book.errors.count %> error prohibited this obj from being saved:
+            </h3>
+          <% else %>
+            <h3>
+              <%= @book.errors.count %> errors prohibited this obj from being saved:
+            </h3>
+          <% end %>
+          <ul>
+            <% @book.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+         </div>
+       <% end %>
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
-      <%= image_tag @book.user.get_profile_image(100, 100) %>
+      <%= image_tag @book_s.user.get_profile_image(100, 100) %>
       <table class="table">
         <tbody>
           <tr></tr>
           <tr>
             <th>name</th>
-            <th><%= @book.user.name %></th>
+            <th><%= @book_s.user.name %></th>
           </tr>
           <tr>
             <th>introduction</th>
-            <th><%= @book.user.introduction %></th>
+            <th><%= @book_s.user.introduction %></th>
           </tr>
         </tbody>
       </table>
@@ -25,7 +43,7 @@
         <%= f.text_field :title %><br>
         <%= f.label :Opinion %><br>
         <%= f.text_area :body %>
-        <%= f.submit 'Create Book' %>
+        <%= f.submit 'Create Book', class: "btn btn-sm btn-success" %>
       <% end %>
     </div>
     
@@ -35,18 +53,18 @@
         <tbody>
           <tr>
             <td>
-              <%= image_tag @book.user.get_profile_image(100, 100) %><br>
-              <%= link_to "name", user_path(@book.user_id) %>
+              <%= image_tag @book_s.user.get_profile_image(100, 100) %><br>
+              <%= link_to "name", user_path(@book_s.user_id) %>
             </td>
             <td>
-              <%= link_to @book.title, book_path(@book.id) %>
+              <%= link_to @book_s.title, book_path(@book_s.id) %>
             </td>
             <td>
-              <%= @book.body %>
+              <%= @book_s.body %>
             </td>
-            <% if @book.user == current_user %>
-            <td><%= link_to "Edit", edit_book_path(@book.id),  class: "btn btn-sm btn-success" %></td>
-            <td><%= link_to "destroy", book_path(@book.id), method: :delete, "data-confirm" => "Are you sure?", class: "btn btn-sm btn-danger" %></td>
+            <% if @book_s.user == current_user %>
+            <td><%= link_to "Edit", edit_book_path(@book_s.id),  class: "btn btn-sm btn-success" %></td>
+            <td><%= link_to "destroy", book_path(@book_s.id), method: :delete, "data-confirm" => "Are you sure?", class: "btn btn-sm btn-danger" %></td>
             <% end %>
           </tr>
         </tbody>
