--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
         <%= f.text_field :title %><br>
         <%= f.label :Opinion %><br>
         <%= f.text_area :body %>
-        <%= f.submit 'Create Book' %>
+        <%= f.submit 'Create Book', class: "btn btn-sm btn-success" %>
       <% end %>
       
     </div>
