--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -35,7 +35,9 @@
         </tbody>
       </table>
       <div class="row">
-        <%= link_to icon('fas', 'fa-user-cog'), edit_user_path(current_user), class: "btn btn-outline-secondary btn-block" %>
+        <%= link_to edit_user_path(current_user), class: "btn btn-outline-secondary btn-block" do %>
+          <i class="fas fa-user-cog"></i>
+        <% end %>
       </div>
       <h2 class="mt-3">New book</h2>
       <%= form_with model: book, url: '/books', method: :post do |f| %>
