--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,22 +1,22 @@
 <div class="container px-5 px-sm-0">
   <% if @book.errors.any? %>
-        <div id="error_explanation">
-          <% if @book.errors.count == 1 %>
-            <h3>
-              <%= @book.errors.count %> error prohibited this obj from being saved:
-            </h3>
-          <% else %>
-            <h3>
-              <%= @book.errors.count %> errors prohibited this obj from being saved:
-            </h3>
-          <% end %>
-          <ul>
-            <% @book.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-          </ul>
-         </div>
-       <% end %>
+    <div id="error_explanation">
+      <% if @book.errors.count == 1 %>
+        <h3>
+          <%= @book.errors.count %> error prohibited this obj from being saved:
+        </h3>
+      <% else %>
+        <h3>
+          <%= @book.errors.count %> errors prohibited this obj from being saved:
+        </h3>
+      <% end %>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
@@ -35,7 +35,9 @@
         </tbody>
       </table>
       <div class="row">
-        <%= link_to "edit", edit_user_path(current_user), class: "btn btn-outline-secondary btn-block" %>
+        <%= link_to edit_user_path(@book_s.user.id), class: "btn btn-outline-secondary btn-block" do %>
+          <i class="fas fa-user-cog"></i>
+        <% end %>
       </div>
       <h2 class="mt-3">New book</h2>
       <%= form_with model: @book, url: '/books', method: :post do |f| %>
@@ -46,15 +48,16 @@
         <%= f.submit 'Create Book', class: "btn btn-sm btn-success" %>
       <% end %>
     </div>
-    
     <div class="col-md-8 offset-md-1">
       <h2>Book detail</h2>
       <table class="table table-hover table-inverse">
         <tbody>
           <tr>
             <td>
-              <%= image_tag @book_s.user.get_profile_image(100, 100) %><br>
-              <%= link_to "name", user_path(@book_s.user_id) %>
+              <%= link_to user_path(@book_s.user_id) do %>
+                <%= image_tag @book_s.user.get_profile_image(100, 100) %><br>
+                <%= @book_s.user.name %>
+              <% end %>
             </td>
             <td>
               <%= link_to @book_s.title, book_path(@book_s.id) %>
@@ -64,7 +67,7 @@
             </td>
             <% if @book_s.user == current_user %>
             <td><%= link_to "Edit", edit_book_path(@book_s.id),  class: "btn btn-sm btn-success" %></td>
-            <td><%= link_to "destroy", book_path(@book_s.id), method: :delete, "data-confirm" => "Are you sure?", class: "btn btn-sm btn-danger" %></td>
+            <td><%= link_to "Destroy", book_path(@book_s.id), method: :delete, "data-confirm" => "Are you sure?", class: "btn btn-sm btn-danger" %></td>
             <% end %>
           </tr>
         </tbody>
