--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,9 @@
         </tbody>
       </table>
       <div class="row">
-        <%= link_to "edit", edit_user_path(current_user), class: "btn btn-outline-secondary btn-block" %>
+        <%= link_to edit_user_path(@user.id), class: "btn btn-outline-secondary btn-block" do %>
+          <i class="fas fa-user-cog"></i>
+        <% end %>
       </div>
       <h2 class="mt-3">New book</h2>
       <%= form_with model: @book, url: books_path, method: :post do |f| %>
@@ -44,7 +46,7 @@
         <tbody>
           <% @books.each do |book| %>
             <tr>
-              <td><%= image_tag @user.get_profile_image(100, 100) %></td>
+              <td><%= link_to image_tag(@user.get_profile_image(100, 100)), user_path(@user.id) %></td>
               <td><%= link_to book.title, book_path(book.id) %></td>
               <td><%= book.body %></td>
             </tr>
